data batches are written and read